toolchain/internal/core/analysis/testdata/valid/inline_objects.vdl
type User {
  id string
  contact {
    email string
    phone? string
  }
  preferences {
    notifications {
      email bool
      sms bool
    }
  }
}
