toolchain/internal/core/analysis/testdata/errors/duplicates/duplicate_type.vdl
// @expect: E801

type User {
  id string
}

type User {
  email string
}
